crates/cli/tests/snapshots/init__init_interactive_accepts_defaults_and_writes_config_config.snap
---
source: crates/cli/tests/init.rs
expression: "read_file(&project.join(\"pv.yml\"))?"
---
php: '8.4'
root: public
env:
  APP_URL: ${url}
  VITE_DEV_SERVER_CERT: ${tls.cert}
  VITE_DEV_SERVER_KEY: ${tls.key}
mailpit:
  version: latest
  env:
    MAIL_HOST: ${smtp_host}
    MAIL_MAILER: smtp
    MAIL_PORT: ${smtp_port}
mysql:
  version: latest
  allocations:
    app:
      env:
        DB_CONNECTION: mysql
        DB_DATABASE: ${database}
        DB_HOST: ${host}
        DB_PASSWORD: ${password}
        DB_PORT: ${port}
        DB_USERNAME: ${username}
redis:
  version: latest
  allocations:
    cache:
      env:
        REDIS_HOST: ${host}
        REDIS_PORT: ${port}
        REDIS_PREFIX: ${prefix}
rustfs:
  version: latest
  allocations:
    uploads:
      env:
        AWS_ACCESS_KEY_ID: ${access_key}
        AWS_BUCKET: ${bucket}
        AWS_ENDPOINT: ${endpoint}
        AWS_SECRET_ACCESS_KEY: ${secret_key}
