crates/cli/tests/snapshots/init__init_interactive_edits_php_resources_and_allocations.snap
---
source: crates/cli/tests/init.rs
expression: session
---
Session {
    exit_code: ExitCode(
        unix_exit_status(
            0,
        ),
    ),
    stdout: "PV init\nDetected Project signals:\n  Laravel: Detected composer.json, artisan, and Laravel project files\n  Vite: Detected Vite in package.json\nSelected Project resources:\n  mailpit: Detected SMTP mail env keys when selected\n  mysql: Detected DB_CONNECTION=mysql\n  redis: Detected Redis-compatible env keys when selected\n  rustfs: Detected AWS/S3 env keys when selected\nResource checklist:\n  [x] MySQL\n  [ ] Postgres\n  [x] Redis\n  [x] Mailpit\n  [x] RustFS/S3\nProject config preview:\nphp: '8.5'\nroot: public\nenv:\n  APP_URL: ${url}\n  VITE_DEV_SERVER_CERT: ${tls.cert}\n  VITE_DEV_SERVER_KEY: ${tls.key}\nmailpit:\n  version: latest\n  env:\n    MAIL_HOST: ${smtp_host}\n    MAIL_MAILER: smtp\n    MAIL_PORT: ${smtp_port}\nmysql:\n  version: latest\n  allocations:\n    analytics:\n      env:\n        ANALYTICS_DB_CONNECTION: mysql\n        ANALYTICS_DB_DATABASE: ${database}\n        ANALYTICS_DB_HOST: ${host}\n        ANALYTICS_DB_PASSWORD: ${password}\n        ANALYTICS_DB_PORT: ${port}\n        ANALYTICS_DB_USERNAME: ${username}\n    app:\n      env:\n        DB_CONNECTION: mysql\n        DB_DATABASE: ${database}\n        DB_HOST: ${host}\n        DB_PASSWORD: ${password}\n        DB_PORT: ${port}\n        DB_USERNAME: ${username}\nredis:\n  version: latest\n  allocations:\n    cache:\n      env:\n        REDIS_HOST: ${host}\n        REDIS_PORT: ${port}\n        REDIS_PREFIX: ${prefix}\nrustfs:\n  version: latest\n  allocations:\n    uploads:\n      env:\n        AWS_ACCESS_KEY_ID: ${access_key}\n        AWS_BUCKET: ${bucket}\n        AWS_ENDPOINT: ${endpoint}\n        AWS_SECRET_ACCESS_KEY: ${secret_key}\nVite HTTPS: configure the app's Vite config to read VITE_DEV_SERVER_CERT and VITE_DEV_SERVER_KEY.\nWrote Project config: <tempdir>/acme/pv.yml\n",
    stderr: "",
    prompts: [
        "Use these selections? -> Selected(2)",
        "PHP track -> Text(\"8.5\")",
        "Document root -> Text(\"public\")",
        "Select Project resources -> SelectedMany([0, 2, 3, 4])",
        "MySQL track -> Text(\"latest\")",
        "MySQL allocations -> Text(\"app,analytics\")",
        "Redis track -> Text(\"latest\")",
        "Redis allocations -> Text(\"cache\")",
        "Mailpit track -> Text(\"latest\")",
        "RustFS/S3 track -> Text(\"latest\")",
        "RustFS/S3 allocations -> Text(\"uploads\")",
        "Write Project config? -> Confirmed(true)",
    ],
}
